docs: add `maven`(e.g. running test) config for Java 17